bug FB多余letter-spacing粘贴

--- a/quickapp-20190501/src/0xFB/assets/index.less
+++ b/quickapp-20190501/src/0xFB/assets/index.less
@@ -166,7 +166,6 @@
         font-family: PingFangSC-Regular;
         font-size: 54px;
         color: #666666;
-        letter-spacing: 0;
         text-align: center;
         margin-top: 162px;
       }
@@ -175,7 +174,6 @@
         font-family: PingFangSC-Regular;
         font-size: 54px;
         color: #666666;
-        letter-spacing: 0;
         text-align: center;
         margin-top: 29px;
       }
@@ -684,7 +682,6 @@
     font-family: PingFangSC-Medium;
     font-size: 64px;
     color: #F9CB3D;
-    letter-spacing: 0;
 
     margin-left: 40px;
     width: 55%;
